FIX: Debug delete board

--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -34,7 +34,7 @@
                 <button type="button" class="btn btn-outline-secondary mr-1 p-2" th:onclick="uptBoard([[${board.boardId}]])">
                     <i class="fa fa-cog"></i>
                 </button>&nbsp;
-                <button type="button" class="btn btn-outline-secondary p-2" th:onclick="delBoard([[${board.stock.stockId}]], [[${board.boardId}]])">
+                <button type="button" class="btn btn-outline-secondary p-2" th:onclick="delBoard([[${board.boardId}]], [[${board.stock.stockId}]])">
                     <i class="fa fa-trash"></i>
                 </button>
             </div>
