--- a/src/main/resources/templates/board/update.html
+++ b/src/main/resources/templates/board/update.html
@@ -8,7 +8,7 @@
 </nav>
 
 <section>
-    <div class="main col-lg-8 bg-white m-auto h-100 p-3 overflow-auto">
+    <div class="main col-lg-8 bg-white m-auto p-3">
 
         <div>
             <a class="btn btn-outline-secondary py-1 px-2" th:href="@{/board/detail(b=${board.boardId}, s=${stockId})}">
@@ -19,13 +19,13 @@
         <form th:action="@{/board/update}" th:method="POST">
             <div class="pt-5 pb-2">
                 <input type="hidden" name="boardId" id="boardId" th:value="${board.boardId}">
-                <label class="fw-bold py-2 text-primary">제목</label>
+                <span class="py-2 text-primary">제목</span>
                 <input class="form-control fs-4 fw-bold" name="title" th:value="${board.title}">
             </div>
 
             <br>
 
-            <label class="fw-bold py-2 text-primary">내용</label>
+            <span class="py-2 text-primary">내용</span>
             <textarea class="form-control board-content card-body overflow-auto" name="content"><th:block th:text="${board.content}"></th:block></textarea>
             <div class="py-3 text-end">
                 <button type="submit" class="btn btn-outline-primary text-end"><span>저장</span></button>
@@ -41,7 +41,6 @@
 </div>
 <!-- // SIDEBAR -->
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script th:src="@{/js/common.js}"></script>
 
 
