REFACTOR: Convert textarea next line

--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -25,7 +25,7 @@
         <br>
         <div class="card border-0">
             <div class="board-content card-body overflow-auto">
-                <span th:text="${board.content}"></span>
+                <span th:utext="${board.content}"></span>
             </div>
         </div>
 
